fix: center pinned horizontal scroll images

--- a/src/components/image/three-scrolling-images.scss
+++ b/src/components/image/three-scrolling-images.scss
@@ -22,13 +22,13 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 16rem;
+    gap: 8vw;
 }
 
 .images__wrapper {
     position: relative;
-    width: 500px;
-    height: 700px;
+    width: 25vw;
+    height: 32vw;
     overflow: hidden;
 
     .image__wrapper {
